--- a/membership/pyproject.toml
+++ b/membership/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "ozdjango"
+name = "membership-project"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.0.6"
+djangorestframework = "^3.15.1"
+djangorestframework-simplejwt = "^5.3.1"
 
 
 [build-system]
